Issue #SB-26698 fix: Image is not properly aligned during Resource creation for MCQ in layout1, layout5, layout 7.

--- a/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
+++ b/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
@@ -309,8 +309,8 @@
 }
 
 .mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container .mcq-option-img {
-    max-height: 100%;
-    max-width: 100%;
+    height: 40px;
+    width: 40px;
     position: relative;
     border-radius: 2px;
     margin: auto;
@@ -321,8 +321,6 @@
 }
 .zoom-icon-set{
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
     cursor: pointer;
 }
 
